# libranet-logging

./: .env.example  .env.template  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  MANIFEST.in  justfile  license.md  makefile  pyproject.toml  setup.cfg  setup.py
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: dependabot-auto-merge.yaml  linting.yaml  testing.yaml
.just/: dir-structure.justfile  dotenv.justfile  git copy.justfile  git.justfile  ipython.justfile  mypy.justfile  pre-commit.justfile  pylint.justfile  pyroma.justfile  pytest.justfile  readthedocs.justfile  ruff.justfile  sphinx.justfile  sshx.justfile  ty.justfile  uv.justfile
.make/: 01-path.mk  02-dir-structure.mk  03-dotenv.mk  05-git.mk  13-pylint.mk  14-mypy.mk  15-bandit.mk  30-pre-commit.mk  55-poetry.mk
docs/: Makefile  changes.md  changes.rst  conf.py  contributing.md  contributors.rst  index-old.rst  index.rst  installation.rst  license.rst  readme.md  readme.rst  requirements.rst  requirements.txt  unittesting.rst  usage.rst
docs/modules/libranet_logging/: index.rst
docs/modules/libranet_logging/_version/: index.rst
docs/modules/libranet_logging/cli/: index.rst
docs/modules/libranet_logging/filters/: index.rst
docs/modules/libranet_logging/logconfig/: index.rst
docs/modules/libranet_logging/loglevel/: index.rst
docs/modules/libranet_logging/utils/: index.rst
docs/modules/libranet_logging/validate/: index.rst
docs/modules/libranet_logging/yaml/: index.rst
etc/: logging.yaml  logging.yml  pip-requirements.txt
etc/ipython/profile_default/startup/: 10-logging.py
etc/ipython/profile_default/startup/_archive/: 05-warnings.py  11-urllib3.py  12-requests.py  13-requests-httpformatting.py  20-flask.py
etc/ipython/profile_ipdb/: ipython_kernel_config.py
etc/ipython/profile_ipdb/startup/: 01-imports.py
src/libranet_logging/: __init__.py  _version.py  cli.py  filters.py  logconfig.py  loglevel.py  py.typed  utils.py  validate.py  yaml.py
src/libranet_logging/etc/: logging.yaml  logging.yml
tests/: conftest.py  logging_email_substitution.yaml  logging_email_substitution.yml  logging_invalid_schema.yaml  logging_invalid_schema.yml  logging_invalid_yaml.yaml  logging_valid.yaml  logging_valid.yml  test_cli.py  test_filters.py  test_logconfig.py  test_loglevel.py  test_yaml.py
